[package]
name = "sentiment_analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
vader_sentiment = "0.1.1"  # Updated to latest available version
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }